add tasks of kw 39